force-app/main/default/objects/BudgetSubmission__c/BudgetSubmission__c.object-meta.xml
<CustomObject>
    <label>予算申請</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>予算申請名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>