force-app/main/default/objects/BudgetSubmission__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>BudgetSubmission__r.Account.Name</formula>
    <label>得意先名</label>
    <type>Text</type>
</CustomField>