force-app/main/default/objects/BudgetSubmission__c/fields/Construction_tons_estimated_budgetNm__c.field-meta.xml
<CustomField>
    <fullName>Construction_tons_estimated_budgetNm__c</fullName>
    <label>施工t数_概算予算(Nm)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>