force-app/main/default/objects/BudgetSubmission__c/fields/ConstructionSales__c.field-meta.xml
<CustomField>
    <fullName>ConstructionSales__c</fullName>
    <label>売上_概算予算</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>