force-app/main/default/objects/BudgetSubmission__c/fields/gaisan_sinseisyacomment__c.field-meta.xml
<CustomField>
    <fullName>gaisan_sinseisyacomment__c</fullName>
    <label>概算予算_申請者コメント</label>
    <type>TextArea</type>
</CustomField>