force-app/main/default/objects/BudgetSubmission__c/fields/gaisan_syounisyacomment3__c.field-meta.xml
<CustomField>
    <fullName>gaisan_syounisyacomment3__c</fullName>
    <label>概算予算_承認者コメント</label>
    <type>TextArea</type>
</CustomField>