force-app/main/default/objects/BudgetSubmission__c/fields/jikkou_sinseisyacommen__c.field-meta.xml
<CustomField>
    <fullName>jikkou_sinseisyacommen__c</fullName>
    <label>実行予算_申請者コメント</label>
    <type>TextArea</type>
</CustomField>