force-app/main/default/objects/BudgetSubmission__c/fields/jikkou_syounisyacomment__c.field-meta.xml
<CustomField>
    <fullName>jikkou_syounisyacomment__c</fullName>
    <label>実行予算_承認者コメント</label>
    <type>TextArea</type>
</CustomField>