force-app/main/default/objects/BudgetSubmission__c/fields/kari_sinseisyacommen__c.field-meta.xml
<CustomField>
    <fullName>kari_sinseisyacommen__c</fullName>
    <label>仮予算_申請者コメント</label>
    <type>TextArea</type>
</CustomField>