force-app/main/default/objects/BudgetSubmission__c/fields/kari_syounisyacomment__c.field-meta.xml
<CustomField>
    <fullName>kari_syounisyacomment__c</fullName>
    <label>仮予算_承認者コメント</label>
    <type>TextArea</type>
</CustomField>