force-app/main/default/objects/BudgetSubmission__c/fields/MaterialSales__c.field-meta.xml
<CustomField>
    <fullName>MaterialSales__c</fullName>
    <label>売上_仮予算</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>