force-app/main/default/objects/BudgetSubmission__c/fields/NetSalesProfitEB__c.field-meta.xml
<CustomField>
    <fullName>NetSalesProfitEB__c</fullName>
    <formula>ConstructionSales__c  - sum_Approximate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>差引売上利益_概算予算</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>