force-app/main/default/objects/BudgetSubmission__c/fields/NetSalesProfitPB__c.field-meta.xml
<CustomField>
    <fullName>NetSalesProfitPB__c</fullName>
    <formula>MaterialSales__c  - sum_tentative__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>差引売上利益_仮予算</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>