force-app/main/default/objects/BudgetSubmission__c/fields/NetSalesProfitWB__c.field-meta.xml
<CustomField>
    <fullName>NetSalesProfitWB__c</fullName>
    <formula>TotalSales__c  - sum_execution__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>差引売上利益_実行予算</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>