force-app/main/default/objects/BudgetSubmission__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>概算予算</fullName>
                <default>true</default>
                <label>概算予算</label>
            </value>
            <value>
                <fullName>仮予算</fullName>
            </value>
            <value>
                <fullName>実行予算</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>