force-app/main/default/objects/BudgetSubmission__c/fields/SalesProfitMarginEB__c.field-meta.xml
<CustomField>
    <fullName>SalesProfitMarginEB__c</fullName>
    <formula>NetSalesProfitEB__c /  ConstructionSales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売上利益率_概算予算</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>