force-app/main/default/objects/BudgetSubmission__c/fields/SalesProfitMarginPB__c.field-meta.xml
<CustomField>
    <fullName>SalesProfitMarginPB__c</fullName>
    <formula>NetSalesProfitPB__c /  MaterialSales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売上利益率_仮予算</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>