force-app/main/default/objects/BudgetSubmission__c/fields/SalesProfitMarginWB__c.field-meta.xml
<CustomField>
    <fullName>SalesProfitMarginWB__c</fullName>
    <formula>NetSalesProfitWB__c /  TotalSales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売上利益率_実行予算</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>