force-app/main/default/objects/BudgetSubmission__c/fields/sum_tentative__c.field-meta.xml
<CustomField>
    <fullName>sum_tentative__c</fullName>
    <label>集計_仮予算</label>
    <summarizedField>Budget__c.amount__c</summarizedField>
    <summaryFilterItems>
        <field>Budget__c.Category__c</field>
        <operation>equals</operation>
        <value>仮予算</value>
    </summaryFilterItems>
    <summaryForeignKey>Budget__c.BudgetSubmission__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>