force-app/main/default/objects/BudgetSubmission__c/fields/TotalCost__c.field-meta.xml
<CustomField>
    <fullName>TotalCost__c</fullName>
    <label>原価合計</label>
    <summarizedField>Budget__c.amount__c</summarizedField>
    <summaryFilterItems>
        <field>Budget__c.Category__c</field>
        <operation>equals</operation>
        <value>概算予算</value>
    </summaryFilterItems>
    <summaryForeignKey>Budget__c.BudgetSubmission__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>