force-app/main/default/objects/BudgetSubmission__c/fields/TotalSales__c.field-meta.xml
<CustomField>
    <fullName>TotalSales__c</fullName>
    <label>売上_実行予算</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>